--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 * {
 	font-family: roboto condensed;
-	margin: 0;
 }
 
 nav {
@@ -16,6 +15,7 @@ nav {
 
 .bg-hero {
 	width: 100%;
+
 }
 
 .titulo {
@@ -54,16 +54,15 @@ nav {
 }
 
 footer {
-	color: white;
-	height: 150px;
-	background-color: #d0fa00;
-	bottom: 0;
-}
-footer i {
 	display: inline-block;
-	padding-right: 50%;
-	padding-left: 50%;
-	padding-top: 15px;
-
+	background-color: #d0fa00;
+	width: 100%;
+	height: 100px;
 }
 
+footer i {
+	color: white;
+	padding-right: 48%; 
+	padding-left: 48%;
+	padding-top: 10px;
+}
